Added withdraw, separeted ether stream and integrated it in frontend
