# backend/src/controllers/oracleController.js
@@ -1,22 +1,27 @@
 var base = require('../model/callback');
 // var oracleAddress = null;
 const Account = require('../model/accounts').Accounts;
+const Oracle = require('../model/accounts').Oracle;
+
 //Added temprory for testing else global.web3 will be used
 const solc = require('solc');
 const fs = require('fs');
 const Web3 = require('web3');
 var config = require('../config');
 var web3 = new Web3(new Web3.providers.HttpProvider(config.testrpcAddress));
+
 //car
 var contracts_input = fs.readFileSync('src/smartcontracts/CarSharingContract.sol');
 var contracts_output = solc.compile(contracts_input.toString(), 1);
 var oracle_bytecode = contracts_output.contracts[':CarDetails'].bytecode;
 var oracle_abi = JSON.parse(contracts_output.contracts[':CarDetails'].interface);
 var car_contract = web3.eth.contract(oracle_abi);
-var oracleAddress = null;
+
 var owner_abi = JSON.parse(contracts_output.contracts[':Owner'].interface);
 var owner_contract = web3.eth.contract(owner_abi);
 var Web3Utils = require('web3-utils');
+
+var oracleAddress = null;
 
 function geofencePrefAndSufToGeofence(prefix, suffix) {
     var pref = web3.toDecimal(removeZeros(prefix));
@@ -38,60 +43,21 @@ function removeZeros(hex) {
 
 module.exports = {
 
+    getOracleAddressLocal : function() {
+        return oracleAddress;
+    },
+
 	getOracleAddress : function(callback){
-		base.successCallback({oracleAddress : oracleAddress}, callback);		
-        // Account.findAll().then(data => {
-        //             	base.successCallback(data,callback);
-        // });
+		base.successCallback({oracleAddress : oracleAddress}, callback);
 	} ,
 
 	setOracleAddress : function(address, callback){
-		oracleAddress = address;
-		base.successCallback({oracleAddress : oracleAddress}, callback);
-		// const body = {
-  //       	'account_address': address
-  //   	};
-
-  //   	Account.findOne({ where: body }).then(data => {
-  //   		console.log("data"+JSON.stringify(data));
-		//     if(data.oracle_address){
-		//     			var body = {
-		//     				Message : "You already have Oracle owner contract", 
-		//     						  contract_address: data.oracle_address };
-		//     			   base.successCallback(body,callback);
-		//     			}
-		//     		else{
-		// 			    	var contract_balance = web3.fromWei(web3.eth.getBalance(address), 'ether');
-		// 					var oracle = oracle_contract.new(
-		// 			                {
-		// 			                    from: address,
-		// 			                    data: oracle_bytecode,
-		// 			                    gas: '4700000'
-		// 			                }, function (e, contract){
-		// 			                if (typeof contract.address !== 'undefined') {
-		// 			                    console.log('Contract mined! address: ' + contract.address +
-		// 			                        ' transactionHash: ' + contract.transactionHash);
-		// 			                    data.updateAttributes({oracle_address : contract.address});
-		// 			                  	  var oracle_set = oracle_contract.at(contract.address);
-		// 					    		  oracle_set.setOracleAddress(contract.address,
-		// 						    			{from: address, gas: 4700000},
-		// 						                    (err, result) => {
-		// 						                    	if(err){
-		// 						                    		base.errorCallback(err,callback);
-		// 						                    	}if(result){
-		// 						                    		// base.successCallback(result,callback);
-		// 						                    		var res = {contractMinedAddress: contract.address , 
-		// 								                    		   transactionHash : contract.transactionHash,
-		// 								                               contract_balance : web3.fromWei(web3.eth.getBalance(contract.address), 'ether') + " ether",
-		// 								                               created: true,
-		// 								                               account_balance: acccount_balance + " ether"};
-		// 			                    			 				   base.successCallback(res,callback);
-		// 						                    	}
-		// 						                    });
-		// 			                }
-		// 					});
-		// 			}
-		// }); 
+	    if (oracleAddress == null) {
+            oracleAddress = address;
+            base.successCallback({oracleAddress : oracleAddress}, callback);
+        } else {
+            base.errorCallback({Message: "There already is an oracle address set."}, callback);
+        }
 	} ,
 
 	getRentedCarsContracts : function(callback){
@@ -141,11 +107,28 @@ module.exports = {
             });
 	} ,
 
-	updatePosition : function(carContractAddress , geohashPosition ,callback){
+	updatePosition : function(carContractAddress, geohashPosition, callback){
 	    if (carContractAddress != undefined) {
+
+            //Implementation Pending as per ABI
+            console.log("updating position...");
+
+
             console.log("Contract: ", carContractAddress, " pos: ", geohashPosition);
-            base.successCallback({Message : "Implementation is pending"},callback);
+            var selectedCar = car_contract.at(carContractAddress);
+            var rent_car = selectedCar.updatePosition(geohashPosition,
+                { from: oracleAddress,
+                    gas: 4700000},(err, result) => {
+                    if (err) {
+                        base.errorCallback(err,callback);
+                        console.log(err);
+                    } if (result) {
+                        console.log("succ: ", result);
+                        base.successCallback(result, callback);
+                    }
+                });
+        } else {
+	        base.errorCallback({Message : "Car address is undefined. Cannot update position of undefined car!"}, callback)
         }
 	}
-
 }
